cmake_minimum_required(VERSION 3.17)
project(aoc2021)

set(CMAKE_CXX_STANDARD 20)

add_executable(aoc2021
        template.cpp
        _1.cpp
        _2.cpp
        _3.cpp
        _4.cpp
        _5.cpp
        _6.cpp
        _7.cpp
        _8.cpp
        _9.cpp
        _10.cpp
        _11.cpp
        _12.cpp
        _13.cpp
        _14.cpp
        _15.cpp
        _16.cpp
        _17.cpp
        _18.cpp
        _19.cpp
        _20.cpp
        _21.cpp
        _22.cpp
        _23.cpp
        _23_2.cpp
        _24.cpp
        _25.cpp
       )
